# smol-base-x

./:  LICENSE  .gitignore  Cargo.toml  README.md
benches/: lut_vs_match.rs
examples/: roundtrip.rs
match_lookup/: Cargo.toml
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: base.rs  base_impl.rs  lib.rs  utf_base.rs  util.rs
