[package]
name = "smol-base-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro = { version = "*", path = "proc_macro" }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "lut_vs_match"
harness = false

[features]
unstable = []

default = []
