[package]
name = "smol-base-x"
version = "0.1.2"
authors = ["mriise <me@mriise.net>"]
description = "no-std centric implementation of base-x"
edition = "2021"
repository = "https://github.com/mriise/smol-base-x"
keywords = ["base", "base-x"]
categories = ["no-std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
match-lookup = { version = "0.1.0", path = "./match_lookup", optional = true }
const-str = { version = "0.3.2", optional = true }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.3"
rand = "0.8.5"
panic-halt = "0.2.0"

[[bench]]
name = "lut_vs_match"
harness = false

[features]
unstable = ["const-str", "match-lookup"]

default = []

